# python-interview

./: README.md  main.py  pyproject.toml  schema.sql  seed.sql  users_generator.py
infra/: db.py
python_interview/: main.py
python_interview/routes/: __init__.py  licenses.py  users.py
routes/: licenses.py  users.py
